css/styles.css
html {	
	color: #fff;
	font-size: 16px;
	font-family: "Poppins", sans-serif;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  line-height: 1.5;	
  min-width: 300px;
  overflow-x: hidden;  
	min-height: 100vh;
	background-color: #fff;	
}
body {
	display: flex;
  flex-direction: column;
	min-height: 100vh;    
}

a {
  color: currentColor;
  cursor: pointer;
  text-decoration: none;
}

.wallpaper {
  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), 
	url("../img/alhambra.jpg") no-repeat center;  
  background-size: cover;  
  position: fixed;
}

.content {
	display: flex;
  position: relative;
	min-height: 100vh;	
}

.content_wrapper {
	display: flex;
	flex-direction: column;
	align-items: center;	
	background-color: rgba(0,0,0,0.4);
	padding: 1.5rem 2.25rem;
	border-radius: 14px
}

.job {
	font-size: 0.8rem;
	font-weight: 600;
  letter-spacing: 0.3em;
  text-transform: uppercase;	
}

.side {
  max-height: 20rem;
  max-width: 20rem;
}

.wallpaper,
.picture-shadow,
.picture-image {
  display: block;
  height: 100%;
  left: 0;
  top: 0;
  width: 100%;
}

.picture {
  padding-top: 100%;
  position: relative;
  width: 100%;
}

.picture-image {
  border-radius: 290486px;
  position: absolute;
}

.about {
  max-width: 35rem;  
	padding: 1.5rem 2.25rem;
}

.name {
  font-size: 3rem;
	font-weight: 500;
  line-height: 1.125;
  margin-bottom: 0.5rem;
}

.hr {
  background-color: #fff;
  border: none;
  content: "";
  height: 1px;
  margin-bottom: 1.5rem;
  margin-top: 1.5rem;
  transform-origin: center left;
  width: 4rem;
}

.description {
  font-size: 1.3rem;
}

.contact {
  display: inline-block;
  margin-top: 1.5rem;
  vertical-align: top;
}

.social {
  display: flex;
  margin-top: 1.5rem;
}

.social li {
  height: 2rem;
  margin-right: 1rem;
  text-align: center;
  width: 2rem;
}

.social a {
  align-items: center;
  display: flex;
  font-size: 2rem;
  height: 2rem;
  justify-content: center;
  opacity: 0.8;
  transition-property: opacity, transform;
  width: 2rem;
  will-change: opacity, transform;
	transform-origin: center;
  transition-duration: 100ms;
}

.social a:hover {
  opacity: 1;
  transform: scale(1.25);
}

.social a:active {
  opacity: 1;
  transform: scale(1.1);
}

/* RESPONSIVENESS: */

/* MOBILE */
@media screen and (max-width: 799px) {
  .content {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0;
  }

  .side {
    margin-bottom: 1rem;
    width: 100%;
  }
}

/* DESKTOP */
@media screen and (min-width: 800px) {
  .content_wrapper, .content {
    align-items: center;
		flex-direction: row;
		justify-content: center;	    	
  }
  .side {
    flex-grow: 0;
    flex-shrink: 0;    
    order: 2;
    width: 16rem;
		margin-left: 2rem;
  }
  .about {
    flex-grow: 1;
    flex-shrink: 1;
  }
}

